--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,7 +58,7 @@
   font-weight: 700;
   border: 1px solid rgba(255, 255, 255, 0.28);
   background: rgba(255, 255, 255, 0.12);
-  color: #e6f6f0;
+  color: #0c1b1b;
 }
 
 .user-mood-dot {
